--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
         </div>
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/elaine.jpg" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Happy Birthday!</h3>
-                <h5 id="wishText">May the js.prototypes always be with you! ;)</h5>
+                <h3 class="wish-hbd">Happy  Birthday!</h3>
+                <h5 id="wishText">May God be with you!</h5>
             </div>
         </div>
 
@@ -141,12 +141,12 @@
             </svg>
         </div>
 
-        <div class="nine">
+        <!-- <div class="nine">
             <p>Okay, now come back and tell me if you liked it.</p>
             <p id="replay">Or click, if you want to watch it again.</p>
             <p class="last-smile">:)</p>
         </div>
-    </div>
+    </div> -->
 
 </body>
     <!-- Greensock -->
