made a template mode

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Elaine</span>
+                <span id="name">____</span>
             </h1>
             <p class="two" id="greetingText">I really like your name btw!</p>
         </div>
@@ -65,10 +65,10 @@
         </div>
 
         <div class="six">
-            <img src="./img/elaine.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="./img/" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
-                <h3 class="wish-hbd">Happy  Birthday!</h3>
+                <h3 class="wish-hbd">Happy       Birthday!</h3>
                 <h5 id="wishText">May God be with you!</h5>
             </div>
         </div>
